##
## $Id: Makefile.am 882 2009-07-01 10:31:32Z alex $
##
## This file is part of openBliSSART.
##
## Copyright (c) 2007-2009, Alexander Lehmann <lehmanna@in.tum.de>
##                          Felix Weninger <felix@weninger.de>
##                          Bjoern Schuller <schuller@tum.de>
##
## Institute for Human-Machine Communication
## Technische Universitaet Muenchen (TUM), D-80333 Munich, Germany
##
## openBliSSART is free software: you can redistribute it and/or modify it under
## the terms of the GNU General Public License as published by the Free Software
## Foundation, either version 2 of the License, or (at your option) any later
## version.
##
## openBliSSART is distributed in the hope that it will be useful, but WITHOUT
## ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
## FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
## details.
##
## You should have received a copy of the GNU General Public License along with
## openBliSSART.  If not, see <http://www.gnu.org/licenses/>.
##

nobase_include_HEADERS = baseName.h \
						 common.h \
						 blissart/AnovaFeatureSelector.h \
						 blissart/AudioObject.h \
						 blissart/BasicApplication.h \
						 blissart/BasicTask.h \
						 blissart/BasicTaskNotification.h \
						 blissart/BinaryReader.h \
						 blissart/BinaryWriter.h \
						 blissart/ClassificationObject.h \
						 blissart/ClassificationTask.h \
						 blissart/CleanupTask.h \
						 blissart/CorrelationFeatureSelector.h \
						 blissart/CrossValidator.h \
						 blissart/DataDescriptor.h \
						 blissart/DataSet.h \
						 blissart/DatabaseEntity.h \
						 blissart/DatabaseSubsystem.h \
						 blissart/FTTask.h \
						 blissart/Feature.h \
						 blissart/FeatureDescriptor.h \
						 blissart/FeatureExtractionTask.h \
						 blissart/FeatureExtractor.h \
						 blissart/FeatureSelector.h \
						 blissart/FeatureSet.h \
						 blissart/HTKWriter.h \
						 blissart/Label.h \
						 blissart/MinHeap.h \
						 blissart/NMDTask.h \
						 blissart/NMFTask.h \
						 blissart/Process.h \
						 blissart/ProgressInterface.h \
						 blissart/ProgressObserver.h \
						 blissart/ProgressObserverAdapter.h \
						 blissart/QueuedTaskManager.h \
						 blissart/Response.h \
						 blissart/SVMModel.h \
						 blissart/SeparationTask.h \
						 blissart/StorageSubsystem.h \
						 blissart/TargetedDeconvolver.h \
						 blissart/ThreadedApplication.h \
						 blissart/WindowFunctions.h \
						 blissart/audio/AudioData.h \
						 blissart/audio/Sound.h \
						 blissart/audio/WaveEncoder.h \
						 blissart/audio/audio.h \
						 blissart/exportDataSet.h \
						 blissart/feature/mfcc.h \
						 blissart/feature/misc.h \
						 blissart/feature/peak.h \
						 blissart/ica/FastICA.h \
						 blissart/ica/PCA.h \
						 blissart/linalg/ColVector.h \
						 blissart/linalg/Matrix.h \
						 blissart/linalg/RowVector.h \
						 blissart/linalg/Vector.h \
						 blissart/linalg/generators/generators.h \
						 blissart/nmf/Deconvolver.h \
						 blissart/nmf/Factorizer.h \
						 blissart/nmf/randomGenerator.h \
						 blissart/validators.h \
						 libsvm/svm.h \
						 types.h
